[ADD] #15 Work Condition CRUD Test Code